<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivShowImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSaveImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:background="#88000000"
        android:backgroundTint="#90000000"
        android:drawableLeft="@drawable/ic_save"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/save_image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="#88000000"
        android:backgroundTint="#90000000"
        android:drawableLeft="@drawable/ic_gallery"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/recent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/edTxtKeyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="#88000000"
            android:backgroundTint="#90000000"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_keyword"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="#FBF9F7"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.564"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.545"
            tools:ignore="LabelFor,RtlSymmetry"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/search"
            android:minHeight="48dp"
            android:text="@string/download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lachalk"
        android:gravity="center_horizontal"
        android:shadowColor="#000000"
        android:shadowDx="2.5"
        android:shadowDy="2.3"
        android:shadowRadius="1.6"
        android:text="@string/wallpaper_downloader"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#88000000"
        android:backgroundTint="#90000000"
        android:drawableLeft="@drawable/ic_shuffle"
        android:fontFamily="@font/inter_semibold"
        android:text="Random"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#88000000"
        android:backgroundTint="#90000000"
        android:drawableLeft="@drawable/ic_refresh"
        android:fontFamily="@font/inter_semibold"
        android:text="Refresh"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnRandom"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>